# mark

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mark/: cli.py  db.py  parser.py  rofi.py  script.py  script_util.py  server.py  storage.py  utils.py
scripts/: script.py  script_util.py
