[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="mark"
version = "0.1.0"
authors=[
    {name="Mohamed Rezk", email="mohrizq895@gmail.com"}
]
description="Mark is a centralized bookmark management utility, written for your own sanity."
requires-python = ">= 3.4"
dependencies = [
    "click",
    "pyperclip",
    "PyYAML",
    "tinydb",
    "bs4",
    "aiohttp",
    "orjson",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bookmarks"]

[project.urls]
Documentation = "https://github.com/mohamedrezk122/mark/blob/master/README.md"
Repository = "https://github.com/mohamedrezk122/mark"
Issues = "https://github.com/mohamedrezk122/mark/issues"
Changelog = "https://github.com/mohamedrezk122/mark/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort", 
]

[project.scripts]
mark="mark:cli.cli"

